<resources>
    <string name="app_name">Eugene Horan Resume</string>
    <string name="app_login_title">Login or Create Account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!--Facebook-->
    <string name="facebook_app_id">134351097188398</string>
    <string name="fb_login_protocol_scheme">fb134351097188398</string>
    <!-- Nav Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Titles -->
    <string name="resume_experience">Experience</string>
    <string name="resume_skills">Skills</string>
    <string name="resume_education">Education</string>


    <!-- Profile Image-->

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="resume">Resume</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact MVVM</string>
    <string name="about_eugene">About Eugene</string>
    <string name="eugene_j_horan">Eugene J. Horan</string>
    <string name="i_will_be_moving_in_the_next_few_months_to_nassau_county">* I will be moving in the next few months to Nassau county.</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="complete">Complete</string>
    <string name="user_name">User Name</string>
</resources>
