<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.resume.horan.eugene.eugenehoranresume.login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/activity_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/mainHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.resume.horan.eugene.eugenehoranresume.util.TextInputView
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.resume.horan.eugene.eugenehoranresume.util.TextInputView>

                <com.resume.horan.eugene.eugenehoranresume.util.TextInputView
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.resume.horan.eugene.eugenehoranresume.util.TextInputView>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in_short"
                    android:theme="@style/AppTheme.ButtonPrimary" />

                <Button
                    android:id="@+id/email_create_account_button"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/action_create_account"
                    android:theme="@style/AppTheme.ButtonSecondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/googleSignIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="1dp" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebookSignIn"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:paddingBottom="11dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="11dp"
                        facebook:com_facebook_login_text="Sign In" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fingerprintHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="88dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:src="@drawable/ic_fingerprint" />

                <TextView
                    android:id="@+id/fingerprintText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:text="Scan Fingerprint" />
            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>