<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".start.StartActivity">

    <data>


        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.resume.horan.eugene.eugenehoranresume.start.StartActivity" />

        <variable
            name="model"
            type="com.resume.horan.eugene.eugenehoranresume.start.StartPresenter" />

    </data>

    <FrameLayout
        android:id="@+id/viewRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewGetFocus"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/viewLoginHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="56dp"
            android:visibility="@{model.showLoading ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:id="@+id/viewMainHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="Eugene Horan's \n Resume App"
                    android:textSize="28sp"
                    android:visibility="@{model.showTitle?View.VISIBLE:View.GONE}" />

                <com.resume.horan.eugene.eugenehoranresume.util.ui.TextInputView
                    android:id="@+id/inputDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{model.showDisplayName?View.VISIBLE:View.GONE}">

                    <EditText
                        android:id="@+id/editDisplayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/display_name"
                        android:inputType="textEmailAddress|textFilter"
                        android:maxLines="1" />

                </com.resume.horan.eugene.eugenehoranresume.util.ui.TextInputView>

                <com.resume.horan.eugene.eugenehoranresume.util.ui.TextInputView
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress|textFilter"
                        android:maxLines="1" />

                </com.resume.horan.eugene.eugenehoranresume.util.ui.TextInputView>

                <com.resume.horan.eugene.eugenehoranresume.util.ui.TextInputView
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:visibility="@{model.showPassword?View.VISIBLE:View.GONE}">

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.resume.horan.eugene.eugenehoranresume.util.ui.TextInputView>

                <Button
                    android:id="@+id/btnEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onLoginEmailClicked}"
                    android:text="@string/action_sign_in_short"
                    android:theme="@style/Login.ButtonPrimary"
                    android:visibility="@{model.showSignIn?View.VISIBLE:View.GONE}" />

                <Button
                    android:id="@+id/btnEmailCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{activity::onCreateAccountClicked}"
                    android:text="@string/action_create_account"
                    android:theme="@style/Login.ButtonFlat"
                    android:visibility="@{model.showCreateAccount?View.VISIBLE:View.GONE}" />

                <LinearLayout
                    android:id="@+id/viewSocialLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="@{model.showSocial?View.VISIBLE:View.GONE}"
                    android:weightSum="2">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btnGoogleSignIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="1dp"
                        android:visibility="gone" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btnFacebookSignIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:elevation="2dp"
                        android:paddingBottom="12dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="12dp"
                        android:visibility="gone"
                        app:com_facebook_login_text="Sign In" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnEmailForgot"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{activity::onForgotPasswordClicked}"
                    android:text="@{model.forgotText}"
                    android:theme="@style/Login.ButtonFlat"
                    android:visibility="@{model.showForgotPassword ? View.VISIBLE : View.GONE}" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/viewProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{model.showLoading ? View.VISIBLE : View.GONE}" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:animateLayoutChanges="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:navigationIcon="@{model.navIcon}"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@{model.navTitle}" />

    </FrameLayout>
</layout>